ppt de apresentação

--- a/api-projeto/api-projeto-site/API-projeto-site/public/publicacoes.html
+++ b/api-projeto/api-projeto-site/API-projeto-site/public/publicacoes.html
@@ -11,8 +11,10 @@
 
 </head>
 
-<body onload="obterPublicacoes()">
 
+<body onload="obterPublicacoes()">
+    
+    <audio id="musica" src=""></audio>
 
     <div class="desejo">
         <img src="img/shailong3.gif" alt="">
@@ -58,6 +60,16 @@
 </body>
 
 <script>
+
+    function tocar_audio(){
+        musica.src = "audio/aberturaDGB.mpeg";
+        musica.play();
+        musica.loop();
+        // musica.volume = 0.05;
+
+    }
+
+    tocar_audio();
 
     function publicar() {
         console.log("entrei!")
