--- a/api-projeto/api-projeto-site/API-projeto-site/public/sagas.html
+++ b/api-projeto/api-projeto-site/API-projeto-site/public/sagas.html
@@ -33,7 +33,7 @@
 
         <div class="container">
             <div style="margin-top: 15vh;margin-left: 8vw;">
-                <img class="icon2" src="img/icon dragon.png" alt="icon Dragon ball">
+                <a href="index.html"><img src="img/seta_voltar.png" alt="" class="b_voltar"></a>
                 <span class="titulo">
                     Sagas
                 </span>
